--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" >
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="/">
-  <link rel="alternate" type="application/rss+xml" title="Jacky Blogger Boy" href="/feed.xml" />
+  <link rel="canonical" href="http://localhost:4000/">
+  <link rel="alternate" type="application/rss+xml" title="Jacky Blogger Boy" href="http://localhost:4000/feed.xml" />
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
